# libspatialindex

./: .appveyor.yml  .codespell.ignore  .codespellrc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  COPYING  ChangeLog  HOWTORELEASE.txt  INSTALL  INSTALL.WIN  Makefile.am  Makefile.in  README  README.rst  aclocal.m4  autogen.sh  azure-pipelines.yml  configure  configure.ac  hobu-config.bat  libspatialindexConfig.cmake.in  ltmain.sh  makefile.vc  package-release.sh  spatialindex.sln
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
ci/: before_install.sh  build.sh  cmake.sh  compile.sh  environment.yml  test.sh
debian/: README  README.Debian  changelog  control  copyright  libspatialindex1.doc-base.EX  rules
docs/: Makefile  environment.yml
docs/doxygen/: doxygen.conf
docs/source/: community.rst  conf.py  development.txt  download.rst  download.txt  index.rst  index.txt  install.rst  install.txt  introduction.rst  introduction.txt  overview.rst  overview.txt
include/: LineSegment.h  MVRTree.h  Makefile.am  Makefile.in  MovingPoint.h  MovingRegion.h  Point.h  RTree.h  Region.h  SpatialIndex.h  TPRTree.h  TimePoint.h  TimeRegion.h  Version.h
include/capi/: CountVisitor.h  CustomStorage.h  DataStream.h  Error.h  IdVisitor.h  Index.h  Item.h  LeafQuery.h  Makefile.am  Makefile.in  ObjVisitor.h  Utility.h  sidx_api.h  sidx_config.h  sidx_impl.h
include/spatialindex/: Ball.h  GeomUtil.h  LineSegment.h  MVRTree.h  Makefile.am  MovingPoint.h  MovingRegion.h  Point.h  RTree.h  Region.h  SpatialIndex.h  TPRTree.h  TimePoint.h  TimeRegion.h  Version.h
include/spatialindex/capi/: BoundsQuery.h  CountVisitor.h  CustomStorage.h  DataStream.h  Error.h  IdVisitor.h  Index.h  InternalVisitor.h  LeafQuery.h  Makefile.am  ObjVisitor.h  Utility.h  sidx_api.h  sidx_config.h  sidx_impl.h
include/spatialindex/rtree/: IRTreeStatistics.h
include/spatialindex/tools/: Makefile.am  PointerPool.h  PoolPointer.h  Tools.h  rand48.h
include/tools/: LineSegment.h  Makefile.am  Makefile.in  Point.h  PointerPool.h  PoolPointer.h  Region.h  SmartPointer.h  TemporaryFile.h  Tools.h  rand48.h  rand48.hpp
regressiontest/: CMakeLists.txt  Makefile.am  Makefile.in
regressiontest/mvrtree/: Exhaustive.cc  Generator.cc  MVRTreeLoad.cc  MVRTreeQuery.cc  Makefile.am  Makefile.in
regressiontest/rtree/: Exhaustive.cc  Generator.cc  Makefile.in  RTreeBulkLoad.cc  RTreeBulkLoad.vcproj  RTreeExhaustive.vcproj  RTreeGenerator.vcproj  RTreeLoad.cc  RTreeLoad.vcproj  RTreeQuery.cc  RTreeQuery.vcproj
regressiontest/tprtree/: Exhaustive.cc  Generator.cc  Makefile.am  Makefile.in  RandomGenerator.cc  RandomGenerator.h  TPRTreeLoad.cc  TPRTreeQuery.cc
scripts/appveyor/: config.cmd  test.cmd
scripts/azp/: docs.yml  linux-test.sh  linux.yml  osx.yml  package.yml  win.yml
scripts/conda/: osx.sh  win64.bat
scripts/docker/: Dockerfile
scripts/travis/: after_success.sh  build.sh  build_docs.sh  deploy_website.sh  pdaldocs-private.key.enc
spatialindex-vc/: spatialindex.vcproj
src/: CMakeLists.txt  Makefile.am  Makefile.in  libspatialindex.pc.in
src/capi/: BoundsQuery.cc  CountVisitor.cc  CustomStorage.cc  DataStream.cc  Error.cc  IdVisitor.cc  Index.cc  InternalVisitor.cc  Item.cc  LeafQuery.cc  Makefile.am  Makefile.in  ObjVisitor.cc  Utility.cc  sidx_api.cc
src/mvrtree/: Index.cc  Index.h  Leaf.cc  Leaf.h  MVRTree.cc  MVRTree.h  Makefile.am  Makefile.in  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Makefile.am  Makefile.in  Node.cc  Node.h  PointerPoolNode.h  RTree.cc  RTree.h  Statistics.cc  Statistics.h
src/spatialindex/: Ball.cc  GeomUtil.cc  LineSegment.cc  (+10 more)
src/storagemanager/: Buffer.cc  Buffer.h  DiskStorageManager.cc  DiskStorageManager.h  Makefile.am  Makefile.in  MemoryStorageManager.cc  MemoryStorageManager.h  RandomEvictionsBuffer.cc  RandomEvictionsBuffer.h
test/: CMakeLists.txt  Geom  Geom.cc  Makefile.am  cleanup-test-output.sh  index-tests.sh
test/geometry/: Intersection.cc  Makefile.am
test/geometry/test1/: run
test/gtest/: .travis_build.sh  CMakeLists.txt  Geometry.cpp  MVRTree.cpp  Makefile.am  NativeTestSupport.h  RTree.cpp  TPRTree.cpp  main.cc  sidx_api_test.h  test.h
test/gtest/gtest-1.10.0/src/: gtest-death-test.cc  gtest-filepath.cc
test/gtest/gtest-1.14.0/include/gtest/: gtest-printers.h
test/gtest/gtest-1.7.0/: CTestTestfile.cmake  Makefile.am
test/gtest/gtest-1.7.0/fused-src/gtest/: gtest-all.cc  gtest.h
test/gtest/gtest-1.7.0/include/gtest/: gtest-message.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest.h
test/gtest/gtest-1.7.0/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h
test/gtest/gtest-1.7.0/scripts/: fuse_gtest_files.py
test/gtest/gtest-1.7.0/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
test/gtest/gtest-1.7.0/test/: gtest-printers_test.cc  gtest_unittest.cc
test/mvrtree/: Exhaustive.cc  Generator.cc  MVRTreeLoad.cc  MVRTreeQuery.cc  Makefile.am
test/mvrtree/test1/: run
test/mvrtree/test2/: run
test/postinstall/: test_cmake.bat  test_cmake.sh  test_pkg-config.sh
test/postinstall/test_c/: CMakeLists.txt  Makefile  test_c.c
test/postinstall/test_cc/: CMakeLists.txt  Makefile  test_cc.cc
test/rtree/: CRTree.cc  Exhaustive.cc  Generator.cc  Makefile.am  RTreeBulkLoad.cc  RTreeGenerator.vcproj  RTreeLoad.cc  RTreeLoad.vcproj  RTreeParallel.cc  RTreeQuery.cc  RTreeQuery.vcproj
test/rtree/test1/: run
test/rtree/test2/: run
test/rtree/test3/: run
test/rtree/test4/: run
test/test1/: run
test/tools/: TemporaryFile.cc
test/tprtree/: Exhaustive.cc  Generator.cc  Makefile.am  RandomGenerator.cc  RandomGenerator.h  TPRTreeLoad.cc  TPRTreeQuery.cc
test/tprtree/test1/: run
test/tprtree/test2/: run
(+39 files in other folders)
