SUBDIRS = tools capi

spatialindexdir = $(includedir)/spatialindex

spatialindex_HEADERS =			SpatialIndex.h \
								RTree.h \
								MVRTree.h \
								TPRTree.h \
								Point.h \
								Region.h \
								LineSegment.h \
								TimePoint.h \
								TimeRegion.h \
								MovingPoint.h \
								MovingRegion.h \
								Version.h 