spatialindexdir = $(includedir)

nobase_spatialindex_HEADERS =			spatialindex/SpatialIndex.h \
								spatialindex/RTree.h \
								spatialindex/MVRTree.h \
								spatialindex/TPRTree.h \
								spatialindex/Point.h \
								spatialindex/Region.h \
								spatialindex/LineSegment.h \
								spatialindex/TimePoint.h \
								spatialindex/TimeRegion.h \
								spatialindex/MovingPoint.h \
								spatialindex/MovingRegion.h \
								spatialindex/Version.h \
								spatialindex/capi/BoundsQuery.h \
								spatialindex/capi/CountVisitor.h \
								spatialindex/capi/CustomStorage.h \
								spatialindex/capi/DataStream.h \
								spatialindex/capi/Error.h \
								spatialindex/capi/IdVisitor.h \
								spatialindex/capi/Index.h \
								spatialindex/capi/LeafQuery.h \
								spatialindex/capi/ObjVisitor.h \
								spatialindex/capi/sidx_api.h \
								spatialindex/capi/sidx_config.h \
								spatialindex/capi/sidx_impl.h \
								spatialindex/capi/Utility.h \
								spatialindex/tools/PointerPool.h \
								spatialindex/tools/PoolPointer.h \
								spatialindex/tools/rand48.h \
								spatialindex/tools/SmartPointer.h \
								spatialindex/tools/Tools.h