spatialindexdir = $(includedir)/spatialindex/capi

dist_spatialindex_HEADERS =	\
								BoundsQuery.h \
								DataStream.h \
								Error.h \
								LeafQuery.h \
								IdVisitor.h \
								Index.h \
								ObjVisitor.h \
								sidx_api.h \
								sidx_config.h \
								sidx_impl.h \
								Utility.h

