spatialindexdir = $(includedir)/spatialindex/capi

dist_spatialindex_HEADERS =	\
								BoundsQuery.h \
								CountVisitor.h \
								DataStream.h \
								Error.h \
								IdVisitor.h \
								Index.h \
								LeafQuery.h \
								ObjVisitor.h \
								sidx_api.h \
								sidx_config.h \
								sidx_impl.h \
								Utility.h

