spatialindexdir = $(includedir)

nobase_spatialindex_HEADERS =			SpatialIndex.h \
								RTree.h \
								MVRTree.h \
								TPRTree.h \
								Point.h \
								Region.h \
								LineSegment.h \
								TimePoint.h \
								TimeRegion.h \
								MovingPoint.h \
								MovingRegion.h \
								Version.h \
								capi/BoundsQuery.h \
								capi/CountVisitor.h \
								capi/DataStream.h \
								capi/Error.h \
								capi/IdVisitor.h \
								capi/Index.h \
								capi/LeafQuery.h \
								capi/ObjVisitor.h \
								capi/sidx_api.h \
								capi/sidx_config.h \
								capi/sidx_impl.h \
								capi/Utility.h \
								tools/PointerPool.h \
								tools/rand48.h \
								tools/SmartPointer.h \
								tools/Tools.h