## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_PROGRAMS = Generator Exhaustive MVRTreeLoad MVRTreeQuery
INCLUDES = -I../../include 
Generator_SOURCES = Generator.cc 
Generator_LDADD = ../../libspatialindex.la
Exhaustive_SOURCES = Exhaustive.cc 
Exhaustive_LDADD = ../../libspatialindex.la
MVRTreeLoad_SOURCES = MVRTreeLoad.cc 
MVRTreeLoad_LDADD = ../../libspatialindex.la
MVRTreeQuery_SOURCES = MVRTreeQuery.cc 
MVRTreeQuery_LDADD = ../../libspatialindex.la

