## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = libsidxc.la
INCLUDES = -I../../include -I../../include/capi
libsidxc_la_SOURCES =	BoundsQuery.cc \
						CountVisitor.cc \
						CustomStorage.cc \
						DataStream.cc \
						Error.cc \
						IdVisitor.cc \
						Index.cc \
						LeafQuery.cc \
						ObjVisitor.cc \
						sidx_api.cc \
						Utility.cc
