## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = libstoragemanager.la
INCLUDES = -I../../include 
libstoragemanager_la_SOURCES = Buffer.h Buffer.cc DiskStorageManager.cc MemoryStorageManager.cc RandomEvictionsBuffer.cc DiskStorageManager.h MemoryStorageManager.h RandomEvictionsBuffer.h
